Fix Safari round border overflow with animation bug

--- a/src/scenes/dashboard/components/ChallengeGroup.module.scss
+++ b/src/scenes/dashboard/components/ChallengeGroup.module.scss
@@ -1,6 +1,5 @@
 .card {
 	height: 15em;
-	z-index: 0;
 }
 
 .margin-top {
