--- a/src/scenes/dashboard/components/NewChallengeButton.module.scss
+++ b/src/scenes/dashboard/components/NewChallengeButton.module.scss
@@ -2,5 +2,4 @@
 	height: 6em;
 	padding-top: 2em !important;
 	padding-bottom: 0 !important;
-	z-index: 0;
 }
